changes in manual

--- a/index.html
+++ b/index.html
@@ -105,6 +105,11 @@ hr {
 						- сочетание сущностей Утилита и Компонент типа БЭМ
 						- анатомия Утилиты
 						- разновидности Утилит
+							- margin, padding, width
+								- `.py--sm` `.py-sm--sm`
+							- text
+							- grid
+							- custom
 						- анатомия Компонента
 						-
 
