utility solution: .subject-media-value

--- a/index.html
+++ b/index.html
@@ -214,18 +214,13 @@ hr {
 							<div class="stackRow-xsOnly_someValue"></div>
 
 							<div class="d_block d-sm_inlineBlock"></div>
-
+gap-0
+gap-sm == gap-all-sm
+gap-sm-sm
+gap-sm-lg
+gap-sm-xl
+gap-sm-3xl
 							<div class="col_24 col-sm_24 col-md_12 col-lg_8  mx_20 my_30 my-sm_20"></div>
-
-						</div>
-
-						<div class="row">
-
-							<div class="stackRow-xsOnly--someValue"></div>
-
-							<div class="d--block d-sm--inlineBlock"></div>
-
-							<div class="col--24 col-sm--24 col-md--12 col-lg--8  mx--20 my--30 my-sm--20"></div>
 
 						</div>
 
@@ -235,9 +230,45 @@ hr {
 
 							<div class="d-block d-sm-inlineBlock"></div>
 
-							<div class="col-24 col-sm-24 col-md-12 col-lg-8  mx-20 my-30 my-sm-20"></div>
+							<div class="col-eq col-sm-24 col-md-12 col-lg-8  mx-20 my-30 my-sm-20"></div>
+							<div class="col-eq"></div>
+							<div class="col-eq"></div>
 
 						</div>
+
+
+<div class="row gap-sm">
+	<div class="col-eq">
+
+		<article class="Teaser">
+			<div class="Teaser__thumb">
+				<img src="" alt="">
+			</div>
+			<div class="Teaser__body"></div>
+		</article>
+
+	</div>
+	<div class="col-eq">
+
+		<article class="Teaser">
+			<div class="Teaser__thumb">
+				<img src="" alt="">
+			</div>
+			<div class="Teaser__body"></div>
+		</article>
+
+	</div>
+	<div class="col-eq">
+
+		<article class="Teaser">
+			<div class="Teaser__thumb">
+				<img src="" alt="">
+			</div>
+			<div class="Teaser__body"></div>
+		</article>
+
+	</div>
+</div>
 
 						<!-- <pre><code>&lt;div class="SomeBlock -modifier is-stateModifier"&gt;
 	&lt;div class="SomeBlock__innerBlock"&gt;&lt;/div&gt;
