side panel styles

--- a/index.html
+++ b/index.html
@@ -3,14 +3,16 @@
 <head>
 	<meta charset="UTF-8">
 	<title>UBEM</title>
-	<link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;700;900&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;700;800&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="./styles/min/common.css">
 </head>
 <body>
 	<div class="Wrap">
 
-		<div class="Sidepanel">
-			<h2 class="color-white">UBEM</h2>
+		<header class="Sidepanel">
+			<h1 class="color-white">UBEM</h1>
+
+			<hr>
 
 			<nav class="SideNav">
 				<ul>
@@ -20,7 +22,7 @@
 							<li><a href="">Examples</a></li>
 						</ul>
 					</li>
-					<li><a href="#bem">Block + Element + Modificator</a>
+					<li><a href="#bem">Block + Element + Modifier</a>
 						<ul>
 							<li><a href="">Morphology</a></li>
 							<li><a href="">Examples</a></li>
@@ -28,7 +30,7 @@
 					</li>
 				</ul>
 			</nav>
-		</div>
+		</header>
 
 		<main class="Main">
 			<div class="Section container">
